@@ -1,5 +1,6 @@
 # Add changes at the top of the list. Keep it in ASCII, and 80-char wide.
 # Do not insert empty lines here, update check depends on it.
+  - change:  10_RESIDENTS: renamed reading residentsGuests to residentsTotalGuests
   - change:  SYSMON: warnings, docu
   - bugfix:  73_km200: Bugfix for fullResponse
   - feature: 73_km200: New services found
